--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </th>
             <th>
               <div>
-                TotalCases
+                Total <br />Cases
                 <div class="order">
                   <div class="total-cases-up"><i class="fas fa-sort-up"></i></div>
                   <div class="total-cases-down"><i class="fas fa-sort-down"></i></div>
@@ -35,7 +35,7 @@
             </th>
             <th>
               <div>
-                NewCases
+                New <br />Cases
                 <div class="order">
                   <div class="new-cases-up"><i class="fas fa-sort-up"></i></div>
                   <div class="new-cases-down"><i class="fas fa-sort-down"></i></div>
@@ -44,7 +44,7 @@
             </th>
             <th>
               <div>
-                TotalDeaths
+                Total <br />Deaths
                 <div class="order">
                   <div class="total-deaths-up"><i class="fas fa-sort-up"></i></div>
                   <div class="total-deaths-down"><i class="fas fa-sort-down"></i></div>
@@ -53,7 +53,7 @@
             </th>
             <th>
               <div>
-                NewDeaths
+                New<br />Deaths
                 <div class="order">
                   <div class="new-deaths-up"><i class="fas fa-sort-up"></i></div>
                   <div class="new-deaths-down"><i class="fas fa-sort-down"></i></div>
@@ -62,7 +62,7 @@
             </th>
             <th>
               <div>
-                TotalRecovered
+                Total<br />Recovered
                 <div class="order">
                   <div class="total-recovered-up"><i class="fas fa-sort-up"></i></div>
                   <div class="total-recovered-down"><i class="fas fa-sort-down"></i></div>
@@ -71,7 +71,7 @@
             </th>
             <th>
               <div>
-                ActiveCases
+                Active<br />Cases
                 <div class="order">
                   <div class="active-cases-up"><i class="fas fa-sort-up"></i></div>
                   <div class="active-cases-down"><i class="fas fa-sort-down"></i></div>
@@ -80,7 +80,7 @@
             </th>
             <th>
               <div>
-                Deaths_1M_pop
+                Deaths <br />_1M_pop
                 <div class="order">
                   <div class="deaths-1m-pop-up"><i class="fas fa-sort-up"></i></div>
                   <div class="deaths-1m-pop-down"><i class="fas fa-sort-down"></i></div>
@@ -89,7 +89,7 @@
             </th>
             <th>
               <div>
-                FirstCase
+                First<br />Case
                 <div class="order">
                   <div class="first-case-up"><i class="fas fa-sort-up"></i></div>
                   <div class="first-case-down"><i class="fas fa-sort-down"></i></div>
@@ -98,7 +98,7 @@
             </th>
             <th>
               <div>
-                Serious_Critical
+                Serious<br />Critical
                 <div class="order">
                   <div class="serious-critical-up"><i class="fas fa-sort-up"></i></div>
                   <div class="serious-critical-down"><i class="fas fa-sort-down"></i></div>
@@ -107,7 +107,7 @@
             </th>
             <th>
               <div>
-                TotCases_1M_Pop
+                TotCases<br />1M_Pop
                 <div class="order">
                   <div class="tot-cases-1m-pop-up"><i class="fas fa-sort-up"></i></div>
                   <div class="tot-cases-1m-pop-down"><i class="fas fa-sort-down"></i></div>
@@ -116,7 +116,7 @@
             </th>
             <th>
               <div>
-                DeathsPercent
+                Deaths<br />Percent
                 <div class="order">
                   <div class="deaths-percent-up"><i class="fas fa-sort-up"></i></div>
                   <div class="deaths-percent-down"><i class="fas fa-sort-down"></i></div>
@@ -125,7 +125,7 @@
             </th>
             <th>
               <div>
-                CasesPercent
+                Cases<br />Percent
                 <div class="order">
                   <div class="cases-percent-up"><i class="fas fa-sort-up"></i></div>
                   <div class="cases-percent-down"><i class="fas fa-sort-down"></i></div>
