--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
           <tr>
             <th>
               <div>
+                #
+              </div>
+            </th>
+            <th>
+              <div>
                 Country
                 <div class="order">
                   <div class="country-up"><i class="fas fa-sort-up"></i></div>
