--- a/index.html
+++ b/index.html
@@ -15,126 +15,85 @@
       <table id="table">
         <thead>
           <tr>
-            <th>
-              <div>
-                #
-              </div>
+            <th class="header" style="cursor: initial;">
+              #
             </th>
             <th>
-              <div>
+              <div class="header header-country">
                 Country
-                <div class="order">
-                  <div class="country-up"><i class="fas fa-sort-up"></i></div>
-                  <div class="country-down"><i class="fas fa-sort-down"></i></div>
-                </div>
+                <div class="order order-country"></div>
               </div>
             </th>
             <th>
-              <div>
+              <div class="header header-total-cases">
                 Total <br />Cases
-                <div class="order">
-                  <div class="total-cases-up"><i class="fas fa-sort-up"></i></div>
-                  <div class="total-cases-down"><i class="fas fa-sort-down"></i></div>
-                </div>
+                <div class="order order-total-cases"></div>
               </div>
             </th>
             <th>
-              <div>
+              <div class="header header-new-cases">
                 New <br />Cases
-                <div class="order">
-                  <div class="new-cases-up"><i class="fas fa-sort-up"></i></div>
-                  <div class="new-cases-down"><i class="fas fa-sort-down"></i></div>
-                </div>
+                <div class="order order-new-cases"></div>
               </div>
             </th>
             <th>
-              <div>
+              <div class="header header-total-deaths">
                 Total <br />Deaths
-                <div class="order">
-                  <div class="total-deaths-up"><i class="fas fa-sort-up"></i></div>
-                  <div class="total-deaths-down"><i class="fas fa-sort-down"></i></div>
-                </div>
+                <div class="order order-total-deaths"></div>
               </div>
             </th>
             <th>
-              <div>
+              <div class="header header-new-deaths">
                 New<br />Deaths
-                <div class="order">
-                  <div class="new-deaths-up"><i class="fas fa-sort-up"></i></div>
-                  <div class="new-deaths-down"><i class="fas fa-sort-down"></i></div>
-                </div>
+                <div class="order order-new-deaths"></div>
               </div>
             </th>
             <th>
-              <div>
+              <div class="header header-total-recovered">
                 Total<br />Recovered
-                <div class="order">
-                  <div class="total-recovered-up"><i class="fas fa-sort-up"></i></div>
-                  <div class="total-recovered-down"><i class="fas fa-sort-down"></i></div>
-                </div>
+                <div class="order order-total-recovered"></div>
               </div>
             </th>
             <th>
-              <div>
+              <div class="header header-active-cases">
                 Active<br />Cases
-                <div class="order">
-                  <div class="active-cases-up"><i class="fas fa-sort-up"></i></div>
-                  <div class="active-cases-down"><i class="fas fa-sort-down"></i></div>
-                </div>
+                <div class="order order-active-cases"></div>
               </div>
             </th>
             <th>
-              <div>
+              <div class="header header-deaths-1m-pop">
                 Deaths <br />_1M_pop
-                <div class="order">
-                  <div class="deaths-1m-pop-up"><i class="fas fa-sort-up"></i></div>
-                  <div class="deaths-1m-pop-down"><i class="fas fa-sort-down"></i></div>
-                </div>
+                <div class="order order-deaths-1m-pop"></div>
               </div>
             </th>
             <th>
-              <div>
+              <div class="header header-first-case">
                 First<br />Case
-                <div class="order">
-                  <div class="first-case-up"><i class="fas fa-sort-up"></i></div>
-                  <div class="first-case-down"><i class="fas fa-sort-down"></i></div>
-                </div>
+                <div class="order order-first-case"></div>
               </div>
             </th>
             <th>
-              <div>
+              <div class="header header-serious-critical">
                 Serious<br />Critical
-                <div class="order">
-                  <div class="serious-critical-up"><i class="fas fa-sort-up"></i></div>
-                  <div class="serious-critical-down"><i class="fas fa-sort-down"></i></div>
-                </div>
+                <div class="order order-serious-critical"></div>
               </div>
             </th>
             <th>
-              <div>
+              <div class="header header-total-cases-1m-pop">
                 TotCases<br />1M_Pop
-                <div class="order">
-                  <div class="tot-cases-1m-pop-up"><i class="fas fa-sort-up"></i></div>
-                  <div class="tot-cases-1m-pop-down"><i class="fas fa-sort-down"></i></div>
-                </div>
+                <div class="order order-total-cases-1m-pop"></div>
               </div>
             </th>
             <th>
-              <div>
+              <div class="header header-deaths-percent">
                 Deaths<br />Percent
-                <div class="order">
-                  <div class="deaths-percent-up"><i class="fas fa-sort-up"></i></div>
-                  <div class="deaths-percent-down"><i class="fas fa-sort-down"></i></div>
-                </div>
+                <div class="order order-deaths-percent"></div>
               </div>
             </th>
             <th>
-              <div>
+              <div class="header header-cases-percent">
                 Cases<br />Percent
-                <div class="order">
-                  <div class="cases-percent-up"><i class="fas fa-sort-up"></i></div>
-                  <div class="cases-percent-down"><i class="fas fa-sort-down"></i></div>
-                </div>
+                <div class="order order-cases-percent"></div>
               </div>
             </th>
           </tr>
