--- a/index.html
+++ b/index.html
@@ -12,95 +12,97 @@
   <body>
     <nav><h1>How fucked are we?</h1></nav>
     <main>
-      <table id="table">
-        <thead>
-          <tr>
-            <th class="header" style="cursor: initial;">
-              #
-            </th>
-            <th>
-              <div class="header header-country">
-                Country
-                <div class="order order-country"></div>
-              </div>
-            </th>
-            <th>
-              <div class="header header-total-cases">
-                Total <br />Cases
-                <div class="order order-total-cases"></div>
-              </div>
-            </th>
-            <th>
-              <div class="header header-new-cases">
-                New <br />Cases
-                <div class="order order-new-cases"></div>
-              </div>
-            </th>
-            <th>
-              <div class="header header-total-deaths">
-                Total <br />Deaths
-                <div class="order order-total-deaths"></div>
-              </div>
-            </th>
-            <th>
-              <div class="header header-new-deaths">
-                New<br />Deaths
-                <div class="order order-new-deaths"></div>
-              </div>
-            </th>
-            <th>
-              <div class="header header-total-recovered">
-                Total<br />Recovered
-                <div class="order order-total-recovered"></div>
-              </div>
-            </th>
-            <th>
-              <div class="header header-active-cases">
-                Active<br />Cases
-                <div class="order order-active-cases"></div>
-              </div>
-            </th>
-            <th>
-              <div class="header header-deaths-1m-pop">
-                Deaths <br />_1M_pop
-                <div class="order order-deaths-1m-pop"></div>
-              </div>
-            </th>
-            <th>
-              <div class="header header-first-case">
-                First<br />Case
-                <div class="order order-first-case"></div>
-              </div>
-            </th>
-            <th>
-              <div class="header header-serious-critical">
-                Serious<br />Critical
-                <div class="order order-serious-critical"></div>
-              </div>
-            </th>
-            <th>
-              <div class="header header-total-cases-1m-pop">
-                TotCases<br />1M_Pop
-                <div class="order order-total-cases-1m-pop"></div>
-              </div>
-            </th>
-            <th>
-              <div class="header header-deaths-percent">
-                Deaths<br />Percent
-                <div class="order order-deaths-percent"></div>
-              </div>
-            </th>
-            <th>
-              <div class="header header-cases-percent">
-                Cases<br />Percent
-                <div class="order order-cases-percent"></div>
-              </div>
-            </th>
-          </tr>
-        </thead>
-        <tbody id="table-body"></tbody>
-        <tfoot></tfoot>
-      </table>
+      <div style="overflow-x: auto;">
+        <table id="table">
+          <thead>
+            <tr>
+              <th class="header" style="cursor: initial;">
+                #
+              </th>
+              <th>
+                <div class="header header-country">
+                  Country
+                  <div class="order order-country"></div>
+                </div>
+              </th>
+              <th>
+                <div class="header header-total-cases">
+                  Total <br />Cases
+                  <div class="order order-total-cases"></div>
+                </div>
+              </th>
+              <th>
+                <div class="header header-new-cases">
+                  New <br />Cases
+                  <div class="order order-new-cases"></div>
+                </div>
+              </th>
+              <th>
+                <div class="header header-total-deaths">
+                  Total <br />Deaths
+                  <div class="order order-total-deaths"></div>
+                </div>
+              </th>
+              <th>
+                <div class="header header-new-deaths">
+                  New<br />Deaths
+                  <div class="order order-new-deaths"></div>
+                </div>
+              </th>
+              <th>
+                <div class="header header-total-recovered">
+                  Total<br />Recovered
+                  <div class="order order-total-recovered"></div>
+                </div>
+              </th>
+              <th>
+                <div class="header header-active-cases">
+                  Active<br />Cases
+                  <div class="order order-active-cases"></div>
+                </div>
+              </th>
+              <th>
+                <div class="header header-deaths-1m-pop">
+                  Deaths <br />_1M_pop
+                  <div class="order order-deaths-1m-pop"></div>
+                </div>
+              </th>
+              <th>
+                <div class="header header-first-case">
+                  First<br />Case
+                  <div class="order order-first-case"></div>
+                </div>
+              </th>
+              <th>
+                <div class="header header-serious-critical">
+                  Serious<br />Critical
+                  <div class="order order-serious-critical"></div>
+                </div>
+              </th>
+              <th>
+                <div class="header header-total-cases-1m-pop">
+                  TotCases<br />1M_Pop
+                  <div class="order order-total-cases-1m-pop"></div>
+                </div>
+              </th>
+              <th>
+                <div class="header header-deaths-percent">
+                  Deaths<br />Percent
+                  <div class="order order-deaths-percent"></div>
+                </div>
+              </th>
+              <th>
+                <div class="header header-cases-percent">
+                  Cases<br />Percent
+                  <div class="order order-cases-percent"></div>
+                </div>
+              </th>
+            </tr>
+          </thead>
+          <tbody id="table-body"></tbody>
+          <tfoot></tfoot>
+        </table>
+      </div>
     </main>
   </body>
 </html>
