--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
     <title>How fucked are we?</title>
   </head>
   <body>
-    <nav><h1>How fucked are we?</h1></nav>
+    <nav>
+      <img src="images/logo.svg" alt="logo" />
+      <h1>How fucked are we?</h1>
+    </nav>
     <main>
-      <div style="overflow-x: auto;">
+      <div style="overflow-x: scroll;">
         <table id="table">
+          <colgroup>
+            <col class="column-hover" span="14" />
+          </colgroup>
           <thead>
             <tr>
               <th class="header" style="cursor: initial;">
