--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               </th>
               <th>
                 <div class="header header-first-case">
-                  First<br />Case
+                  <span class="no-wrap">First Case</span>
                   <div class="order order-first-case"></div>
                 </div>
               </th>
