fixed a lot of stuff

--- a/index.html
+++ b/index.html
@@ -89,6 +89,6 @@
       </div>
     </main>
     <div class="error-message"></div>
-    <footer><p>&copy; 112 Dogodki 2020</p><p><a href="#">Na vrh <i class="fas fa-arrow-up"></i></p></footer>
+    <footer><p>&copy; How fucked are we? 2020</p><p><a href="#">Na vrh <i class="fas fa-arrow-up"></i></p></footer>
   </body>
 </html>
