lokalizacija, velikost tabele

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/04a2ad65c9.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Bitter|IBM+Plex+Sans|Concert+One&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
     <script src="js/main.js" defer></script>
     <link rel="stylesheet" href="css/style.css" />
     <title>How fucked are we?</title>
