--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   </head>
   <body>
     <nav>
-      <img src="images/logo.svg" alt="logo" />
       <h1>How fucked are we?</h1>
+      <!--img src="images/logo.svg" alt="logo" /-->
     </nav>
     <section class="world-report">
       <div class="total">      
