--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <div class="closed-deaths">Deaths: <div class="number closed-deaths-number"></div></div>
       </div>
     </section>
+    <form id="search">
+      <input type="text" placeholder="Country name...">
+    </form>
     <main>
       <div class="table" id="table">
         <div class="header-container">
