--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
         <div class="closed-deaths">Deaths: <div class="number closed-deaths-number"></div></div>
       </div>
     </section>
-    <form id="search">
-      <input type="text" placeholder="Country name...">
-    </form>
+    <section class="search">
+      <form id="search" class="search-form">
+        <input type="text" placeholder="Country name">
+      </form>
+    </section>
+
     <main>
       <div class="table" id="table">
         <div class="header-container">
