centered search, added responsivnes on table

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       </div>
     </section>
     <section class="search">
+      Search
       <form id="search" class="search-form">
         <input type="text" placeholder="Country name">
       </form>
