--- a/index.html
+++ b/index.html
@@ -16,29 +16,31 @@
       <!--img src="images/logo.svg" alt="logo" /-->
     </nav>
     <section class="world-report">
-      <p><a href="#table">view by country</a></p>
-      <div class="total">      
-        <div class="cases">Total Coronavirus cases:<div class="number cases-number"></div></div>
-        <div class="deaths">Deaths:<div class="number deaths-number"></div></div>
-        <div class="recovered">Recovered:<div class="number recovered-number"></div></div>
+      <p><a href="#search-anchor">view by country</a></p>
+      <div class="world-total">      
+        <div class="world-cases">Total Coronavirus cases:<div class="world-number world-cases-number"></div></div>
+        <div class="world-deaths">Deaths:<div class="world-number world-deaths-number"></div></div>
+        <div class="world-recovered">Recovered:<div class="world-number world-recovered-number"></div></div>
       </div>
-      <div class="active-cases">
-        <div class="curently-infected-patients">Infected: <div class="number curently-infected-patients-number"></div></div>
-        <div class="in-mid-condition">Mid condition: <div class="number in-mid-condition-number"></div></div>
-        <div class="critical-states">Critical condition: <div class="number critical-states-number"></div></div>
-      </div>
-      <div class="closed-cases">
-        <div class="closed-recovered">Recovered: <div class="number closed-recovered-number"></div></div>
-        <div class="closed-deaths">Deaths: <div class="number closed-deaths-number"></div></div>
+      <div class="world-active-cases">
+        <div class="world-curently-infected-patients">Infected: <div class="world-number world-curently-infected-patients-number"></div></div>
+        <div class="world-in-mid-condition">Mid condition: <div class="world-number world-in-mid-condition-number"></div></div>
+        <div class="world-critical-states">Critical condition: <div class="world-number world-critical-states-number"></div></div>
       </div>
     </section>
-    <section class="search">
+    <section class="country-report">
+      <div class="country"></div>
+      <div class="country-cases">Total cases: <div class="country-number country-number-cases"></div></div>
+      <div class="country-deaths">Total deaths: <div class="country-number country-number-deaths"></div></div>
+      <div class="country-recovered">Total recovered: <div class="country-number country-number-recovered"></div></div>
+
+    </section>
+    <section class="search" id="search-anchor">
       Search
       <form id="search" class="search-form">
         <input type="text" placeholder="Country name">
       </form>
     </section>
-
     <main>
       <div class="table" id="table">
         <div class="header-container">
