--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/04a2ad65c9.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css?family=Bitter|IBM+Plex+Sans|Roboto+Condensed&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bitter&family=Heebo&family=Noto+Sans&display=swap" rel="stylesheet">
     <script src="js/main.js" defer></script>
     <link rel="stylesheet" href="css/style.css" />
     <title>How fucked are we?</title>
@@ -15,32 +14,53 @@
       <h1>How fucked are we?</h1>
       <!--img src="images/logo.svg" alt="logo" /-->
     </nav>
-    <section class="world-report">
-      <p><a href="#search-anchor">view by country</a></p>
-      <div class="world-total">      
-        <div class="world-cases">Total Coronavirus cases:<div class="world-number world-cases-number"></div></div>
-        <div class="world-deaths">Deaths:<div class="world-number world-deaths-number"></div></div>
-        <div class="world-recovered">Recovered:<div class="world-number world-recovered-number"></div></div>
+    <section class="totals">
+    <div class="view-by-country"><a href="#search-anchor">view by country</a></div>
+    <div class="world-report">     
+      <div class="world-labels">      
+        <div class="world-cases">Total  cases:</div>
+        <div class="world-deaths">Deaths:</div>
+        <div class="world-recovered">Recovered:</div>
+        <div class="world-curently-infected-patients">Infected:</div>
+        <div class="world-in-mid-condition">Mid condition:</div>
+        <div class="world-critical-states">Critical condition:</div>
       </div>
-      <div class="world-active-cases">
-        <div class="world-curently-infected-patients">Infected: <div class="world-number world-curently-infected-patients-number"></div></div>
-        <div class="world-in-mid-condition">Mid condition: <div class="world-number world-in-mid-condition-number"></div></div>
-        <div class="world-critical-states">Critical condition: <div class="world-number world-critical-states-number"></div></div>
+      <hr>
+      <div class="world-numbers">
+        <div class="world-number world-cases-number"></div>
+        <div class="world-number world-deaths-number"></div>
+        <div class="world-number world-recovered-number"></div>
+        <div class="world-number world-curently-infected-patients-number"></div>
+        <div class="world-number world-in-mid-condition-number"></div>
+        <div class="world-number world-critical-states-number"></div>
       </div>
-    </section>
-    <section class="country-report">
-      <div class="country"></div>
-      <div class="country-cases">Total cases: <div class="country-number country-number-cases"></div></div>
-      <div class="country-deaths">Total deaths: <div class="country-number country-number-deaths"></div></div>
-      <div class="country-recovered">Total recovered: <div class="country-number country-number-recovered"></div></div>
-
-    </section>
-    <section class="search" id="search-anchor">
-      Search
-      <form id="search" class="search-form">
+    </div>
+    <div class="country-report">
+      <div class="country-name-label">your location: <div class="country-name"></div></div>
+      <div class="country-report-inner">      
+        <div class="country-labels">
+        <div class="country-cases">Total cases:</div>
+        <div class="country-deaths">Total deaths:</div>
+        <div class="country-recovered">Total recovered:</div>
+      </div>
+      <hr>
+      <div class="country-numbers">
+        <div class="country-number country-number-cases"></div>
+        <div class="country-number country-number-deaths"></div>
+        <div class="country-number country-number-recovered"></div>
+      </div>
+    </div>  
+    </div>
+  </section>
+  <section class="search" id="search-anchor">
+    <form id="search" class="search-form">
+      <div class="form-group">
+        <label>Search</label>
         <input type="text" placeholder="Country name">
-      </form>
-    </section>
+      </div>
+      
+    </form>
+  </section>
     <main>
       <div class="table" id="table">
         <div class="header-container">
