changed color scheme and totals layout

--- a/index.html
+++ b/index.html
@@ -35,21 +35,20 @@
         <div class="world-number world-critical-states-number"></div>
       </div>
     </div>
-    <div class="country-report">
-      <div class="country-name-label">your location: <div class="country-name"></div></div>
-      <div class="country-report-inner">      
+    <div class="country-report">             
         <div class="country-labels">
+        <div class="country-name-label">your location: </div>
         <div class="country-cases">Total cases:</div>
         <div class="country-deaths">Total deaths:</div>
         <div class="country-recovered">Total recovered:</div>
       </div>
       <hr>
       <div class="country-numbers">
+        <div class="country-name"></div>
         <div class="country-number country-number-cases"></div>
         <div class="country-number country-number-deaths"></div>
         <div class="country-number country-number-recovered"></div>
       </div>
-    </div>  
     </div>
   </section>
   <section class="search" id="search-anchor">
