changed color scheme and totals layout

--- a/index.html
+++ b/index.html
@@ -38,16 +38,22 @@
     <div class="country-report">             
         <div class="country-labels">
         <div class="country-name-label">your location: </div>
-        <div class="country-cases">Total cases:</div>
+        <div class="country-labels-inner" style="display: none;">
+          <div class="country-cases">Total cases:</div>
         <div class="country-deaths">Total deaths:</div>
         <div class="country-recovered">Total recovered:</div>
+        </div>
+        
       </div>
       <hr>
       <div class="country-numbers">
         <div class="country-name"></div>
-        <div class="country-number country-number-cases"></div>
+        <div class="country-numbers-inner" style="display: none;">
+          <div class="country-number country-number-cases"></div>
         <div class="country-number country-number-deaths"></div>
         <div class="country-number country-number-recovered"></div>
+        </div>
+        
       </div>
     </div>
   </section>
