--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bitter&family=Heebo&family=Noto+Sans&display=swap" rel="stylesheet">
     <script src="js/main.js" defer></script>
     <link rel="stylesheet" href="css/style.css" />
-    <title>How fucked are we?</title>
+    <title>Covid-19 informacije</title>
   </head>
   <body>
     <div class="loading-content">
