--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Aktualni podatki o okužbah s Covid-19 (Koronavirusom) po svetu. Prikaz podatkov za cel svet in vsako državo, z možnostjo filtriranja po državah." />
+    <meta name="keywords" content="kovid-19,covid-19,korona,corona,koronavirus,coronavirus,virus,okužbe" />
     <script src="https://kit.fontawesome.com/04a2ad65c9.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Bitter&family=Heebo&family=Noto+Sans&display=swap" rel="stylesheet">
     <script src="js/main.js" defer></script>
