--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bitter&family=Heebo&family=Noto+Sans&display=swap" rel="stylesheet">
     <script src="js/main.js" defer></script>
     <link rel="stylesheet" href="css/style.css" />
+    <link id="favicon" rel="shortcut icon" type="image/png" sizes="16x16" href="images/favicon.png" />
     <title>Covid-19 informacije</title>
   </head>
   <body>
