--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="js/main.js" defer></script>
     <link rel="stylesheet" href="css/style.css" />
     <link id="favicon" rel="shortcut icon" type="image/png" sizes="16x16" href="images/favicon.png" />
-    <title>Covid-19 informacije</title>
+    <title>Covid-19 Informacije</title>
   </head>
   <body>
     <div class="loading-content">
