--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Aktualni podatki o okužbah s Covid-19 (Koronavirusom) po svetu. Prikaz podatkov za cel svet in vsako državo, z možnostjo filtriranja po državah." />
     <meta name="keywords" content="kovid-19,covid-19,korona,corona,koronavirus,coronavirus,virus,okužbe" />
+    <meta http-equiv="Refresh" content="600"> 
     <script src="https://kit.fontawesome.com/04a2ad65c9.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Bitter&family=Heebo&family=Noto+Sans&display=swap" rel="stylesheet">
     <script src="js/main.js" defer></script>
@@ -22,7 +23,7 @@
       <h1>Covid-19 informacije</h1>
     </nav>
     <section class="totals">
-    <div class="view-by-country"><a href="#search-anchor">podatki po državah</a></div>
+      <a href="#search-anchor"><div class="view-by-country">podatki po državah</div></a>
     <h2>Svetovni podatki</h2>
     <div class="world-report">     
       <div class="world-data">      
@@ -52,9 +53,15 @@
       <div class="form-group">
         <label>Iskanje</label>
         <input type="text" placeholder="Država ...">
-      </div>
-      
+      </div>   
     </form>
+  </section>
+  <section class="refresh">
+    <div class="refresh-container">
+      <div class="refresh-left"><button class="refresh-button">Osveži</button>
+        <div class="last-refresh-time">Nazadnje osveženo:&nbsp;<div class="last-refresh-time-number"></div></div></div>
+      <div class="refresh-right">* &nbsp; &nbsp; Novi primeri in nove smrti <br> se osvežijo vsak dan ob 00:00.</div>
+    </div>
   </section>
     <main>
       <div class="table" id="table">
@@ -115,6 +122,6 @@
       </div>
     </main>
     <div class="error-message"></div>
-    <footer><p>&copy; How fucked are we? 2020</p><p><a href="#">Na vrh <i class="fas fa-arrow-up"></i></p></footer>
+    <footer><p>&copy; COVID-19 INFORMACIJE 2020</p><p><a href="#">Na vrh <i class="fas fa-arrow-up"></i></p></footer>
   </body>
 </html>
