added death rate by age

--- a/index.html
+++ b/index.html
@@ -48,6 +48,20 @@
         </div>
     </div>
   </section>
+  <section class="deaths-by-age">
+    <div class="deaths-by-age-container">
+      <h2 class="deaths-by-age-title">Smrtnost po starostnih skupinah</h2>
+      <div class="range"><div class="range-text">80+</div><div class="range-number range-number-zero"></div></div>
+      <div class="range"><div class="range-text">70-79</div><div class="range-number range-number-one"></div></div>
+      <div class="range"><div class="range-text">60-69</div><div class="range-number range-number-two"></div></div>
+      <div class="range"><div class="range-text">50-59</div><div class="range-number range-number-three"></div></div>
+      <div class="range"><div class="range-text">40-49</div><div class="range-number range-number-four"></div></div>
+      <div class="range"><div class="range-text">30-39</div><div class="range-number range-number-five"></div></div>
+      <div class="range"><div class="range-text">20-29</div><div class="range-number range-number-six"></div></div>
+      <div class="range"><div class="range-text">10-19</div><div class="range-number range-number-seven"></div></div>
+      <div class="range"><div class="range-text">0-9</div><div class="range-number range-number-eight"></div></div>
+    </div>
+  </section>
   <section class="search" id="search-anchor">
     <form id="search" class="search-form">
       <div class="form-group">
