added deaths by sex

--- a/index.html
+++ b/index.html
@@ -62,6 +62,16 @@
       <div class="range"><div class="range-text">0-9</div><div class="range-number range-number-eight"></div></div>
     </div>
   </section>
+  <section class="deaths-by-sex">
+    <div class="deaths-by-sex-title">Smrtnost po spolu</div>
+    <div class="deaths-by-sex-container">
+      <div class="deaths-by-sex-inner">
+        <div class="deaths-by-sex-female"><div class="deaths-by-sex-female-icon"><i class="fas fa-female"></i></div><div class="deaths-by-sex-number number-female"></div></div>
+      <div class="deaths-by-sex-male"><div class="deaths-by-sex-male-icon"><i class="fas fa-male"></i></div><div class="deaths-by-sex-number number-male"></div></div>
+    </div>
+      
+    </div>
+  </section>
   <section class="search" id="search-anchor">
     <form id="search" class="search-form">
       <div class="form-group">
